# PipelineDesigner

./: CLAUDE.md  LICENSE  PipelineDesigner.py  README.md  pyproject.toml  requirements.txt
examples/: fir4_example.py  fir4_vhdl_export.py  fir_pipeline_sim.py
pipeline_designer/: __init__.py  main.py
pipeline_designer/app/: __init__.py  config.py  main_window.py
pipeline_designer/domain/: __init__.py  grid.py
pipeline_designer/domain/models/: __init__.py  behavior.py  component.py  design.py  instance.py  signal_constraints.py  stage.py
pipeline_designer/domain/simulation/: __init__.py  executor.py  graph_sim.py  vhdl_generator.py
pipeline_designer/domain/vhdl/: __init__.py  structural_generator.py
pipeline_designer/infrastructure/ghdl/: __init__.py  runner.py
pipeline_designer/infrastructure/persistence/: __init__.py  category_manager.py  library_loader.py
pipeline_designer/presentation/: __init__.py
pipeline_designer/presentation/canvas/: __init__.py  _scene_alignment_mixin.py  _scene_component_mixin.py  _scene_connection_mixin.py  _scene_interface_mixin.py  commands.py  scene.py  view.py
pipeline_designer/presentation/dialogs/: __init__.py  category_manager_dialog.py
pipeline_designer/presentation/panels/: __init__.py  component_palette.py  component_tables.py  property_editor.py
pipeline_designer/utils/fixedpoint/: __init__.py  (+1 more)
tests/: __init__.py  conftest.py  test_domain_models.py  test_scene.py  test_ui_interactions.py
tests/domain/: test_models.py  test_simulation_cosim.py
tests/presentation/: conftest.py  test_scene_signal_class.py
(+22 files in other folders)
