[tool.poetry]
name = "pipeline_designer"
version = "0.1.0"
description = "A graphical FPGA/ASIC pipeline design tool"
authors = ["Andre Koehler <pheles@gmx.de>"]
readme = "README.md"
packages = [{include = "pipeline_designer"}]

[tool.poetry.dependencies]
python = "^3.11"
PySide6 = "^6.6.0"
pydantic = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[tool.poetry.scripts]
pipeline-designer = "pipeline_designer.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
